# samples/MultiLambdaSample/src/Functions.Identity/IdentityJsonContext.cs
@@ -12,6 +12,10 @@ namespace Functions.Identity;
 [JsonSerializable(typeof(RegisterResponse))]
 [JsonSerializable(typeof(RefreshTokenCommand))]
 [JsonSerializable(typeof(RefreshTokenResponse))]
+[JsonSerializable(typeof(LoginOptionsCommand))]
+[JsonSerializable(typeof(LoginOptionsResponse))]
+[JsonSerializable(typeof(InvalidCredentialsError))]
+[JsonSerializable(typeof(ValidationProblemError))]
 [JsonSerializable(typeof(ErrorResponse))]
 [JsonSerializable(typeof(RouteNotFoundResponse))]
 [JsonSourceGenerationOptions(PropertyNamingPolicy = JsonKnownNamingPolicy.CamelCase)]
